# cmdix

./: .bzrignore  .gitignore  .travis.yml  CHANGES.rst  LICENSE  LICENSE.txt  NEWS.rst  README.rst  README.txt  conftest.py  coreutils.py  pycoreutils.py  pyproject.toml  setup.cfg  setup.py  sh.py  tox.ini
.github/workflows/: main.yml
buildroot/: .config  busybox.config  linux.config
buildroot/fs/pyos/etc/: hostname  hosts  passwd  shadow
buildroot/package/: Config.in
buildroot/package/pycoreutils/: Config.in  pycoreutils.mk
buildroot/package/virtualenv/: Config.in  virtualenv.mk
cmdix/: __init__.py  __main__.py  compressor.py  exception.py  hasher.py  lib.py  py27compat.py
cmdix/command/: __init__.py  arch.py  base64.py  basename.py  bunzip2.py  bzip2.py  cal.py  cat.py  chmod.py  chown.py  clear.py  cmd_arch.py  cmd_base64.py  cmd_basename.py  cmd_bunzip2.py  cmd_bzip2.py  cmd_cal.py  cmd_cat.py  cmd_chmod.py  cmd_chown.py  cmd_cp.py  cmd_crond.py  cmd_diff.py  cmd_dirname.py  cmd_env.py  cmd_expand.py  cmd_gunzip.py  cmd_httpd.py  cmd_id.py  cmd_init.py  cmd_kill.py  cmd_ln.py  cmd_logger.py  cmd_login.py  cmd_ls.py  cmd_md5sum.py  cmd_mkdir.py  cmd_mount.py  cmd_mv.py  cmd_nl.py  (+79 more)
cmdix/compat/: py311.py  py39.py
cmdix/test/: __init__.py  py27compat.py  test_base64.py  test_basename.py  test_cal.py  test_cat.py  test_expand.py  test_login.py  test_ls.py  test_md5sum.py  test_nl.py  test_onlyunix.py  test_pycoreutils.py  test_pycoreutils_lib.py  test_tail.py  test_tar.py  test_uuidgen.py
docs/: api.rst  conf.py  index.rst  pycoreutils.rst  pyos.rst
newsfragments/: +217c175c.feature.rst  +ba8d8f7f.bugfix.rst  +fa73ce0c.removal.rst  14.bugfix.rst  16.bugfix.rst  17.bugfix.rst  19.feature.rst  21.bugfix.rst  5.feature.rst
pycoreutils/: __init__.py  arch  basename  cat  chroot  compressor.py  dirname  exception.py  hasher.py  lib.py  ls  md5sum  mkdir  mv  pwd  pycoreutils.py  seq  sha1sum  sha224sum  sha256sum  sha384sum  sha512sum  shell.py  shred  shuf  sleep  tail  touch  uname  yes
pycoreutils/command/: __init__.py  cmd_arch.py  cmd_base64.py  cmd_basename.py  cmd_bunzip2.py  cmd_bzip2.py  cmd_cal.py  cmd_cat.py  cmd_cd.py  cmd_chmod.py  cmd_chown.py  cmd_chroot.py  cmd_clear.py  cmd_cp.py  cmd_crond.py  cmd_diff.py  cmd_dirname.py  cmd_env.py  cmd_expand.py  cmd_gunzip.py  cmd_gzip.py  cmd_httpd.py  cmd_id.py  cmd_init.py  cmd_kill.py  cmd_ln.py  cmd_logger.py  cmd_login.py  cmd_ls.py  cmd_md5sum.py  cmd_mkdir.py  cmd_mktemp.py  cmd_more.py  cmd_mount.py  cmd_mv.py  cmd_nl.py  cmd_pwd.py  cmd_rm.py  cmd_rmdir.py  cmd_sendmail.py  (+25 more)
pycoreutils/test/: __init__.py  test_base64.py  test_basename.py  test_cal.py  test_cat.py  test_expand.py  test_helperfunctions.py  test_login.py  test_ls.py  test_md5sum.py  test_nl.py  test_onlyunix.py  test_tar.py  test_uuidgen.py
pycoreutils/tests/: __init__.py  test_basename.py  test_cal.py  test_expand.py  test_helperfunctions.py  test_ls.py  test_md5sum.py  test_tar.py
tests/: __init__.py  test_base64.py  test_basename.py  test_cal.py  test_cat.py  test_cp.py  test_env.py  test_expand.py  test_login.py  test_ls.py  test_md5sum.py  test_nl.py  test_onlyunix.py  test_pycoreutils_lib.py  test_rm.py  test_tail.py  test_tar.py  test_uuidgen.py
