[metadata]
name = cmdix
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Unix commands in Pure Python
long_description = file:README.rst
url = https://github.com/jaraco/cmdix
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Environment :: Console
	Topic :: System :: Shells
	Topic :: Utilities

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	importlib_metadata
	importlib_resources
	backports.hook_compressed; python_version < "3.10"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	types-backports

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	gunzip = cmdix:run
	gzip = cmdix:run
	uname = cmdix:run
	tail = cmdix:run
	wc = cmdix:run
	tee = cmdix:run
	base64 = cmdix:run
	sha384sum = cmdix:run
	env = cmdix:run
	id = cmdix:run
	uuidgen = cmdix:run
	clear = cmdix:run
	chmod = cmdix:run
	mktemp = cmdix:run
	sha1sum = cmdix:run
	shuf = cmdix:run
	cal = cmdix:run
	tar = cmdix:run
	sha224sum = cmdix:run
	cat = cmdix:run
	dirname = cmdix:run
	sort = cmdix:run
	httpd = cmdix:run
	sh = cmdix:run
	bzip2 = cmdix:run
	mv = cmdix:run
	ln = cmdix:run
	chown = cmdix:run
	sha512sum = cmdix:run
	arch = cmdix:run
	yes = cmdix:run
	rmdir = cmdix:run
	chroot = cmdix:run
	ls = cmdix:run
	cp = cmdix:run
	logger = cmdix:run
	rm = cmdix:run
	pwd = cmdix:run
	mkdir = cmdix:run
	zip = cmdix:run
	more = cmdix:run
	whoami = cmdix:run
	nl = cmdix:run
	sha256sum = cmdix:run
	kill = cmdix:run
	crond = cmdix:run
	sendmail = cmdix:run
	basename = cmdix:run
	touch = cmdix:run
	bunzip2 = cmdix:run
	diff = cmdix:run
	sleep = cmdix:run
	mount = cmdix:run
	watch = cmdix:run
	login = cmdix:run
	shred = cmdix:run
	md5sum = cmdix:run
	init = cmdix:run
	uptime = cmdix:run
	smtpd = cmdix:run
	expand = cmdix:run
	seq = cmdix:run
	wget = cmdix:run
